--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        font-family: 'Hermit';
+        src: url('fonts/Hermit-Regular.otf') format('otf');
+    }
+}
